--- a/dev/styles/_base.scss
+++ b/dev/styles/_base.scss
@@ -10,7 +10,7 @@ audio:not([controls]) { display: none; height: 0; }
 
 // Base
 // ----------------------------------------------------------------------------
-html { box-sizing: border-box; font-size: 62.5%; text-size-adjust: 100%; }
+html { box-sizing: border-box; font-size: 62.5%; text-size-adjust: 100%; overflow-y: scroll; }
 *, *::before, *::after { box-sizing: inherit; }
 html, button, input, optgroup, select, textarea { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 html, body { overflow-x: hidden; }
