adjusted packery styles

--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -1049,11 +1049,11 @@ svg.ui_eye {
 }
 // --- Packery --- \\
 article.packery div.gutter-sizer {
-	width: 1.6rem;
+	width: 5.555556%;
 	height: 1.6rem;
 }
 article.packery .gallery_link {
-	width: calc(50% - 0.8rem);
+	width: 47.222222%;
 	opacity: 0.01;
 }
 article.packery a.gallery_link {
