finally solved that damn non-centering bug

--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -43,6 +43,10 @@
 					%a.wrap_svg{:href => "https://twitter.com/northandnavy", :title => "Follow us on Twitter", :target => "_blank"}
 						%svg.ui_twitter.svg_inline{:viewBox => "0 0 64 46"}
 							%use{"xlink:href" => "#ui_twitter"}
+				%li.social_facebook
+					%a.wrap_svg{:href => "https://www.facebook.com/northandnavy", :title => "Like us on Facebook", :target => "_blank"}
+						%svg.ui_facebook.svg_inline{:viewBox => "0 0 35 64"}
+							%use{"xlink:href" => "#ui_facebook"}
 				%li.social_instagram
 					%a.wrap_svg{:href => "http://instagram.com/northandnavy", :title => "See us on Instagram", :target => "_blank"}
 						%svg.ui_instagram.svg_inline{:viewBox => "0 0 64 64"}
