updated modules / added vote content

--- a/dev/haml/404.haml
+++ b/dev/haml/404.haml
@@ -8,6 +8,10 @@
 
 	%body.error_404
 
+		#svgInject.visuallyhidden
+			/ inject:svg
+			/ endinject
+
 		%main{:role => "main"}
 
 			%section#error.error
