--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -6,6 +6,9 @@ $hsl_pink:    hsl(4,100%,75%);
 $hsl_white:   hsl(0,0%,100%);
 $hsl_L96:     hsl(0,0%,96%);
 
+$hsl_red:     hsl(3,84%,56%);
+$hsl_aircan:  hsl(7,73%,49%);
+
 $hsla_L96-98: hsla(0,0%,96%,0.98);
 
 $boxshadow_drop: 0 0.1rem 0.2rem hsla(0,0%,0%,0.3);
