--- a/dev/haml/index.haml
+++ b/dev/haml/index.haml
@@ -8,6 +8,10 @@
 
 	%body
 
+		#svgInject.visuallyhidden
+			/ inject:svg
+			/ endinject
+
 		= Haml::Engine.new(File.read("dev/haml/partials/_html_header.haml")).render
 
 		%main{:role => "main"}
